--- a/Src/index.html
+++ b/Src/index.html
@@ -9,7 +9,44 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="display-1">Hello, World!</h1>
+    
+
+
+
+    <div id="product-section" class="container-fluid">
+        <div id="section-header" class="row">
+            <div class="col-12"> <h2 id="index-h2-header">New Posters</h2></div>
+        </div>
+        <div class="row justify-content-center">
+            <div id="Posters" class="col-3"> 
+                <div class="card border-0" style="width: 18rem;">
+                <a href=""><img src="/Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"  class="card-img-top" alt="..."></a>
+                <div class="card-body">
+                  <h6 class="card-title"><a href="" id="link-text">Hilma af Klint</a></h6>
+                </div> 
+            </div>
+        </div>
+            <div id="Posters" class="col-3 ">
+                 <div class="card border-0" style="width: 18rem;">
+                 <a href=""><img src="/Images/Monet - The Artist's Garden at Vétheuil Plakat.png" class="card-img-top" alt="..."></a>
+                 <div class="card-body">
+                    <h6 class="card-title"><a href="" id="link-text">Monet</a></h6>
+                    <p></p>
+                 </div> 
+            </div>
+        </div>
+            <div id="Posters" class="col-3 ">
+                 <div class="card border-0" style="width: 18rem;">
+                <a href=""><img src="/Images/Un Po' Di Blu No2 Plakat.png" class="card-img-top" alt="..."></a>
+                <div class="card-body">
+                    <h6 class="card-title"><a href="" id="link-text">Hmmm</a></h6>
+                </div> 
+            </div>
+        </div>
+        </div>
+
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
