--- a/Src/index.html
+++ b/Src/index.html
@@ -19,27 +19,32 @@
         </div>
         <div class="row justify-content-center">
             <div id="Posters" class="col-3"> 
-                <div class="card border-0" style="width: 18rem;">
+                <div class="card border-0 bg-transparent" style="width: 18rem;">
                 <a href=""><img src="/Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"  class="card-img-top" alt="..."></a>
-                <div class="card-body">
-                  <h6 class="card-title"><a href="" id="link-text">Hilma af Klint</a></h6>
+                <div class="card-body bg-transparent">
+                  <h6 class="card-title my-0"><a href="" id="link-text">Hilma af Klint</a></h6>
+                  <p class="card-text"><a href="" id="link-text">The Ten Largest Childhood</a> </p>
+                  <p class="card-text"><a href="" id="price-text">250,00 kr</a> </p>
                 </div> 
             </div>
         </div>
             <div id="Posters" class="col-3 ">
-                 <div class="card border-0" style="width: 18rem;">
+                 <div class="card border-0 bg-transparent" style="width: 18rem;">
                  <a href=""><img src="/Images/Monet - The Artist's Garden at Vétheuil Plakat.png" class="card-img-top" alt="..."></a>
                  <div class="card-body">
-                    <h6 class="card-title"><a href="" id="link-text">Monet</a></h6>
-                    <p></p>
+                    <h6 class="card-title my-0"><a href="" id="link-text">Monet</a></h6>
+                    <p class="card-text"><a href="" id="link-text">The Artist's Garden at Vétheuil</a> </p>
+                    <p class="card-text"><a href="" id="price-text">200,00 kr</a> </p>
                  </div> 
             </div>
         </div>
             <div id="Posters" class="col-3 ">
-                 <div class="card border-0" style="width: 18rem;">
+                 <div class="card border-0 bg-transparent" style="width: 18rem;">
                 <a href=""><img src="/Images/Un Po' Di Blu No2 Plakat.png" class="card-img-top" alt="..."></a>
                 <div class="card-body">
-                    <h6 class="card-title"><a href="" id="link-text">Hmmm</a></h6>
+                    <h6 class="card-title my-0"><a href="" id="link-text">Hmmm</a></h6>
+                    <p class="card-text"><a href="" id="link-text">Un Po' Di Blu</a> </p>
+                    <p class="card-text"><a href="" id="price-text">300,00 kr</a> </p>
                 </div> 
             </div>
         </div>
