--- a/Src/index.html
+++ b/Src/index.html
@@ -1,57 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
-</head>
-<body>
-    
-
-
-
+  </head>
+  <body>
     <div id="product-section" class="container-fluid">
-        <div id="section-header" class="row">
-            <div class="col-12"> <h2 id="index-h2-header">New Posters</h2></div>
-        </div>
-        <div class="row justify-content-center">
-            <div id="Posters" class="col-3"> 
-                <div class="card border-0 bg-transparent" style="width: 18rem;">
-                <a href=""><img src="/Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"  class="card-img-top" alt="..."></a>
-                <div class="card-body bg-transparent">
-                  <h6 class="card-title my-0"><a href="" id="link-text">Hilma af Klint</a></h6>
-                  <p class="card-text"><a href="" id="link-text">The Ten Largest Childhood</a> </p>
-                  <p class="card-text"><a href="" id="price-text">250,00 kr</a> </p>
-                </div> 
+      <div id="section-header" class="row">
+        <div class="col"><h2 id="index-h2-header">New Posters</h2></div>
+      </div>
+      <div class="row justify-content-center">
+        <div id="Posters" class="col">
+          <div class="card border-0 bg-transparent" style="width: 18rem">
+            <a href="/Src/ProductPage.html"
+              ><img
+                src="/Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"
+                class="card-img-top"
+                alt="..."
+            /></a>
+            <div class="card-body bg-transparent">
+              <h6 class="card-title my-0">
+                <a href="/src/ProductPage.html" id="link-text">Hilma af Klint</a>
+              </h6>
+              <p class="card-text">
+                <a href="/src/ProductPage.html" id="link-text">The Ten Largest Childhood</a>
+              </p>
+              <p class="card-text"><a href="/src/ProductPage.html" id="price-text">250,00 kr</a></p>
             </div>
+          </div>
         </div>
-            <div id="Posters" class="col-3 ">
-                 <div class="card border-0 bg-transparent" style="width: 18rem;">
-                 <a href=""><img src="/Images/Monet - The Artist's Garden at Vétheuil Plakat.png" class="card-img-top" alt="..."></a>
-                 <div class="card-body">
-                    <h6 class="card-title my-0"><a href="" id="link-text">Monet</a></h6>
-                    <p class="card-text"><a href="" id="link-text">The Artist's Garden at Vétheuil</a> </p>
-                    <p class="card-text"><a href="" id="price-text">200,00 kr</a> </p>
-                 </div> 
+        <div id="Posters" class="col">
+            <div class="card border-0 bg-transparent" style="width: 18rem">
+              <a href="/src/ProductPage.html"
+                ><img
+                  src="/Images/Screenshot 2023-02-21 at 19-51-39 SELF-PORTRAIT 02.png"
+                  class="card-img-top"
+                  alt="..."
+              /></a>
+              <div class="card-body bg-transparent">
+                <h6 class="card-title my-0">
+                  <a href="/src/ProductPage.html" id="link-text">Klorofyl</a>
+                </h6>
+                <p class="card-text">
+                  <a href="/src/ProductPage.html" id="link-text">SELF-PORTRAIT</a>
+                </p>
+                <p class="card-text"><a href="" id="price-text">255,00 kr</a></p>
+              </div>
             </div>
-        </div>
-            <div id="Posters" class="col-3 ">
-                 <div class="card border-0 bg-transparent" style="width: 18rem;">
-                <a href=""><img src="/Images/Un Po' Di Blu No2 Plakat.png" class="card-img-top" alt="..."></a>
-                <div class="card-body">
-                    <h6 class="card-title my-0"><a href="" id="link-text">Hmmm</a></h6>
-                    <p class="card-text"><a href="" id="link-text">Un Po' Di Blu</a> </p>
-                    <p class="card-text"><a href="" id="price-text">300,00 kr</a> </p>
-                </div> 
+          </div>
+        <div id="Posters" class="col">
+          <div class="card border-0 bg-transparent" style="width: 18rem">
+            <a href="/src/ProductPage.html"
+              ><img
+                src="/Images/Monet - The Artist's Garden at Vétheuil Plakat.png"
+                class="card-img-top"
+                alt="..."
+            /></a>
+            <div class="card-body">
+              <h6 class="card-title my-0">
+                <a href="/src/ProductPage.html" id="link-text">Monet</a>
+              </h6>
+              <p class="card-text">
+                <a href="/src/ProductPage.html" id="link-text">The Artist's Garden at Vétheuil</a>
+              </p>
+              <p class="card-text"><a href="/Src/ProductPage.html" id="price-text">200,00 kr</a></p>
             </div>
+          </div>
         </div>
+        <div id="Posters" class="col">
+          <div class="card border-0 bg-transparent" style="width: 18rem">
+            <a href="/Src/ProductPage.html"
+              ><img
+                src="/Images/Un Po' Di Blu No2 Plakat.png"
+                class="card-img-top"
+                alt="..."
+            /></a>
+            <div class="card-body">
+              <h6 class="card-title my-0">
+                <a href="/Src/ProductPage.html" id="link-text">Hmmm</a>
+              </h6>
+              <p class="card-text">
+                <a href="/Src/ProductPage.html" id="link-text">Un Po' Di Blu</a>
+              </p>
+              <p class="card-text"><a href="/Src/ProductPage.html" id="price-text">300,00 kr</a></p>
+            </div>
+          </div>
         </div>
-
+      </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
