--- a/Src/index.html
+++ b/Src/index.html
@@ -9,7 +9,39 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="nav">
+        <div class="logo">
+            <img src="https://www.freepnglogos.com/uploads/instagram-logo-png-transparent-0.png" alt="logo">
+        </div>
+        
+        <div class="title">
+            <div>
+                All Products
+            </div>
+        </div>
+
+
+        <div class="information">
+            <div class="login">
+                <a href="#test2">
+                    <div class="fill">
+                        <!-- <img src="https://www.freepnglogos.com/uploads/instagram-logo-png-transparent-0.png" alt="logo"> -->
+                    </div>    
+                </a>
+            </div>
+            <div class="basket">
+                <div class="fill"></div>
+            </div>
+        </div>
+    </header>
     <h1 class="display-1">Hello, World!</h1>
+
+
+    <div class="my-test"></div>
+    <div id="test2"></div>
+    <div class="my-test"></div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
