--- a/Src/index.html
+++ b/Src/index.html
@@ -31,7 +31,7 @@
   
   <header class="nav">
     <div class="logo">
-        <img src="https://www.freepnglogos.com/uploads/instagram-logo-png-transparent-0.png" alt="logo">
+        <img src="https://www.svgrepo.com/show/59465/mona-lisa.svg" alt="logo">
     </div>
     
     <div class="title">
@@ -45,12 +45,14 @@
         <div class="login">
             <a href="#test2">
                 <div class="fill">
-                    <!-- <img src="https://www.freepnglogos.com/uploads/instagram-logo-png-transparent-0.png" alt="logo"> -->
+                    <img src="https://www.svgrepo.com/show/497407/profile-circle.svg" alt="logo">
                 </div>    
             </a>
         </div>
         <div class="basket">
-            <div class="fill"></div>
+            <div class="fill">
+              <img src="https://www.svgrepo.com/show/477196/basket-free-material.svg" alt="logo">
+            </div>
         </div>
     </div>
 </header>
