added link to logo

--- a/Src/index.html
+++ b/Src/index.html
@@ -31,7 +31,10 @@
   
   <header class="nav">
     <div class="logo">
+      <a href="/Src/index.html">
         <img src="https://www.svgrepo.com/show/59465/mona-lisa.svg" alt="logo">
+      </a>
+      
     </div>
     
     <div class="title">
