Added ".." in front of images

--- a/Src/index.html
+++ b/Src/index.html
@@ -85,7 +85,7 @@
           <div class="card border-0 bg-transparent" style="width: 18rem">
             <a href="/Src/ProductPage.html"
               ><img
-                src="/Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"
+                src="../Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"
                 class="card-img-top"
                 alt="..."
             /></a>
@@ -110,7 +110,7 @@
           <div class="card border-0 bg-transparent" style="width: 18rem">
             <a href="/src/ProductPage.html"
               ><img
-                src="/Images/Screenshot 2023-02-21 at 19-51-39 SELF-PORTRAIT 02.png"
+                src="../Images/Screenshot 2023-02-21 at 19-51-39 SELF-PORTRAIT 02.png"
                 class="card-img-top"
                 alt="..."
             /></a>
@@ -129,7 +129,7 @@
           <div class="card border-0 bg-transparent" style="width: 18rem">
             <a href="/src/ProductPage.html"
               ><img
-                src="/Images/Monet - The Artist's Garden at Vétheuil Plakat.png"
+                src="../Images/Monet - The Artist's Garden at Vétheuil Plakat.png"
                 class="card-img-top"
                 alt="..."
             /></a>
@@ -152,7 +152,7 @@
           <div class="card border-0 bg-transparent" style="width: 18rem">
             <a href="/Src/ProductPage.html"
               ><img
-                src="/Images/Un Po' Di Blu No2 Plakat.png"
+                src="../Images/Un Po' Di Blu No2 Plakat.png"
                 class="card-img-top"
                 alt="..."
             /></a>
