--- a/Src/index.html
+++ b/Src/index.html
@@ -38,9 +38,12 @@
     </div>
     
     <div class="title">
-        <div>
-            All Products
-        </div>
+      <a id="all-products-text" href="/Src/allPosters.html">
+        <div   >
+          All Products
+      </div>
+      </a>
+       
     </div>
 
 
