--- a/Src/index.html
+++ b/Src/index.html
@@ -51,7 +51,9 @@
         <div class="login">
             <a href="#test2">
                 <div class="fill">
+                  <a href="/Src/Login.html">
                     <img src="https://www.svgrepo.com/show/497407/profile-circle.svg" alt="logo">
+                  </a>
                 </div>    
             </a>
         </div>
