navigation in navbar

--- a/Src/ProductPage.html
+++ b/Src/ProductPage.html
@@ -23,9 +23,12 @@
     </div>
     
     <div class="title">
-        <div>
-            All Products
-        </div>
+      <a id="all-products-text" href="/Src/allPosters.html">
+        <div   >
+          All Products
+      </div>
+      </a>
+       
     </div>
 
 
@@ -33,13 +36,18 @@
         <div class="login">
             <a href="#test2">
                 <div class="fill">
+                  <a href="/Src/Login.html">
                     <img src="https://www.svgrepo.com/show/497407/profile-circle.svg" alt="logo">
+                  </a>
                 </div>    
             </a>
         </div>
         <div class="basket">
             <div class="fill">
-              <img src="https://www.svgrepo.com/show/477196/basket-free-material.svg" alt="logo">
+              <a href="/Src/Basket.html">
+                <img src="https://www.svgrepo.com/show/477196/basket-free-material.svg" alt="logo">
+
+              </a>
             </div>
         </div>
     </div>
