--- a/Src/index.html
+++ b/Src/index.html
@@ -59,7 +59,10 @@
         </div>
         <div class="basket">
             <div class="fill">
-              <img src="https://www.svgrepo.com/show/477196/basket-free-material.svg" alt="logo">
+              <a href="/Src/Basket.html">
+                <img src="https://www.svgrepo.com/show/477196/basket-free-material.svg" alt="logo">
+
+              </a>
             </div>
         </div>
     </div>
