--- a/Src/index.html
+++ b/Src/index.html
@@ -94,7 +94,7 @@
       <div class="row justify-content-center">
         <div id="Posters" class="col">
           <div class="card border-0 bg-transparent" style="width: 18rem">
-            <a href="/Src/ProductPage.html"
+            <a href="/Src/Products/ProductPage.html"
               ><img
                 src="../Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"
                 class="card-img-top"
