--- a/Src/index.html
+++ b/Src/index.html
@@ -102,24 +102,24 @@
             /></a>
             <div class="card-body bg-transparent">
               <h6 class="card-title my-0">
-                <a href="/src/ProductPage.html" id="link-text"
+                <a href="/Src/Products/ProductPage.html" id="link-text"
                   >Hilma af Klint</a
                 >
               </h6>
               <p class="card-text">
-                <a href="/src/ProductPage.html" id="link-text"
+                <a href="/Src/Products/ProductPage.html" id="link-text"
                   >The Ten Largest Childhood</a
                 >
               </p>
               <p class="card-text">
-                <a href="/src/ProductPage.html" id="price-text">250,00 kr</a>
+                <a href="/Src/Products/ProductPage.html" id="price-text">250,00 kr</a>
               </p>
             </div>
           </div>
         </div>
         <div id="Posters" class="col">
           <div class="card border-0 bg-transparent" style="width: 18rem">
-            <a href="/src/ProductPage.html"
+            <a href="/Src/Products/ProductPage.html"
               ><img
                 src="../Images/Screenshot 2023-02-21 at 19-51-39 SELF-PORTRAIT 02.png"
                 class="card-img-top"
@@ -127,10 +127,10 @@
             /></a>
             <div class="card-body bg-transparent">
               <h6 class="card-title my-0">
-                <a href="/src/ProductPage.html" id="link-text">Klorofyl</a>
+                <a href="/Src/Products/ProductPage.html" id="link-text">Klorofyl</a>
               </h6>
               <p class="card-text">
-                <a href="/src/ProductPage.html" id="link-text">SELF-PORTRAIT</a>
+                <a href="/Src/Products/ProductPage.html" id="link-text">SELF-PORTRAIT</a>
               </p>
               <p class="card-text"><a href="" id="price-text">255,00 kr</a></p>
             </div>
@@ -138,7 +138,7 @@
         </div>
         <div id="Posters" class="col">
           <div class="card border-0 bg-transparent" style="width: 18rem">
-            <a href="/src/ProductPage.html"
+            <a href="/Src/Products/ProductPage.html"
               ><img
                 src="../Images/Monet - The Artist's Garden at Vétheuil Plakat.png"
                 class="card-img-top"
@@ -146,22 +146,22 @@
             /></a>
             <div class="card-body">
               <h6 class="card-title my-0">
-                <a href="/src/ProductPage.html" id="link-text">Monet</a>
+                <a href="/Src/Products/ProductPage.html" id="link-text">Monet</a>
               </h6>
               <p class="card-text">
-                <a href="/src/ProductPage.html" id="link-text"
+                <a href="/Src/Products/ProductPage.html" id="link-text"
                   >The Artist's Garden at Vétheuil</a
                 >
               </p>
               <p class="card-text">
-                <a href="/Src/ProductPage.html" id="price-text">200,00 kr</a>
+                <a href="/Src/Products/ProductPage.html" id="price-text">200,00 kr</a>
               </p>
             </div>
           </div>
         </div>
         <div id="Posters" class="col">
           <div class="card border-0 bg-transparent" style="width: 18rem">
-            <a href="/Src/ProductPage.html"
+            <a href="/Src/Products/ProductPage.html"
               ><img
                 src="../Images/Un Po' Di Blu No2 Plakat.png"
                 class="card-img-top"
@@ -169,13 +169,13 @@
             /></a>
             <div class="card-body">
               <h6 class="card-title my-0">
-                <a href="/Src/ProductPage.html" id="link-text">Hmmm</a>
+                <a href="/Src/Products/ProductPage.html" id="link-text">Hmmm</a>
               </h6>
               <p class="card-text">
-                <a href="/Src/ProductPage.html" id="link-text">Un Po' Di Blu</a>
+                <a href="/Src/Products/ProductPage.html" id="link-text">Un Po' Di Blu</a>
               </p>
               <p class="card-text">
-                <a href="/Src/ProductPage.html" id="price-text">300,00 kr</a>
+                <a href="/Src/Products/ProductPage.html" id="price-text">300,00 kr</a>
               </p>
             </div>
           </div>
