--- a/Src/allPosters.html
+++ b/Src/allPosters.html
@@ -1,12 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/Src/allPoster.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+
+  <body>
+    <header class="nav">
+      <div class="logo">
+        <a href="/Src/index.html">
+          <img
+            src="https://www.svgrepo.com/show/59465/mona-lisa.svg"
+            alt="logo"
+          />
+        </a>
+      </div>
+
+      <div class="title">
+        <a id="all-products-text" href="/Src/allPosters.html">
+          <div>All Products</div>
+        </a>
+      </div>
+
+      <div class="information">
+        <div class="login">
+          <a href="#test2">
+            <div class="fill">
+              <a href="/Src/Login.html">
+                <img
+                  src="https://www.svgrepo.com/show/497407/profile-circle.svg"
+                  alt="logo"
+                />
+              </a>
+            </div>
+          </a>
+        </div>
+        <div class="basket">
+          <div class="fill">
+            <a href="/Src/Basket.html">
+              <img
+                src="https://www.svgrepo.com/show/477196/basket-free-material.svg"
+                alt="logo"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="container-fluid" id="main-container">
+      <div class="row">
+        <div class="col-2">
+          <div class="sidenav mt-5">
+            <div class="row mb-3">
+              <div class="container-fluid ps-3 mb" id="main-container">
+                <h6 class="mx-0">Artist</h6>
+                <div class="row ps-4">
+                  <div class="form-check mb-2">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="flexCheckDefault"
+                    />
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <p class="lead mx-0 my-0">Van Gogh</p>
+                    </label>
+                  </div>
+                </div>
+                <div class="row ps-4">
+                  <div class="form-check mb-2">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="flexCheckDefault"
+                    />
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <p class="lead mx-0 my-0">Monet</p>
+                    </label>
+                  </div>
+                </div>
+                <div class="row ps-4">
+                  <div class="form-check mb-2">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="flexCheckDefault"
+                    />
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <p class="lead mx-0 my-0">Picasso</p>
+                    </label>
+                  </div>
+                </div>
+                <h6 class="mx-0">Style</h6>
+                <div class="row ps-4">
+                  <div class="form-check mb-2">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="flexCheckDefault"
+                    />
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <p class="lead mx-0 my-0">Impressionist</p>
+                    </label>
+                  </div>
+                  <div class="form-check mb-2">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="flexCheckDefault"
+                    />
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <p class="lead mx-0 my-0">Cubism</p>
+                    </label>
+                  </div>
+                  <div class="form-check mb-2">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="flexCheckDefault"
+                    />
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <p class="lead mx-0 my-0">Abstract</p>
+                    </label>
+                  </div>
+                </div>
+                <h6 class="mx-0">Format</h6>
+                <div class="row ps-4">
+                  <div class="form-check mb-2">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="flexCheckDefault"
+                    />
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <p class="lead mx-0 my-0">A2</p>
+                    </label>
+                  </div>
+                  <div class="form-check mb-2">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="flexCheckDefault"
+                    />
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <p class="lead mx-0 my-0">A3</p>
+                    </label>
+                  </div>
+                  <div class="form-check mb-2">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="flexCheckDefault"
+                    />
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <p class="lead mx-0 my-0">A4</p>
+                    </label>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-10">
+          <div class="container-fluid">
+            <div class="row justify-content-around">
+              <div class="row mt-5">
+                <div class="col"><h1 class="display-4">Posters</h1></div>
+              </div>
+              <div class="row">
+                
+              </div>
+              <div class="row">
+                <div class="col-3">hi</div>
+                <div class="col-3">hi</div>
+                <div class="col-3">hi</div>
+                <div class="col-3">hi</div>
+                <div class="col-3">hi</div>
+                <div class="col-3">hi</div>
+                <div class="col-3">hi</div>
+                <div class="col-3">hi</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
