--- a/Src/allPosters.html
+++ b/Src/allPosters.html
@@ -63,7 +63,7 @@
           <div class="sidenav mt-5">
             <div class="row mb-3">
               <div class="container-fluid ps-3 mb" id="main-container">
-                <h6 class="mx-0">Artist</h6>
+                <h6 id="sidenav-header" class="mx-0">Artist</h6>
                 <div class="row ps-4">
                   <div class="form-check mb-2">
                     <input
@@ -103,7 +103,7 @@
                     </label>
                   </div>
                 </div>
-                <h6 class="mx-0">Style</h6>
+                <h6 id="sidenav-header" class="mx-0">Style</h6>
                 <div class="row ps-4">
                   <div class="form-check mb-2">
                     <input
@@ -139,7 +139,7 @@
                     </label>
                   </div>
                 </div>
-                <h6 class="mx-0">Format</h6>
+                <h6 id="sidenav-header" class="mx-0">Format</h6>
                 <div class="row ps-4">
                   <div class="form-check mb-2">
                     <input
@@ -185,18 +185,164 @@
               <div class="row mt-5">
                 <div class="col"><h1 class="display-4">Posters</h1></div>
               </div>
-              <div class="row">
-                
+              <div class="row mx-3">
+                <div class="col">
+                  <p class="lead">
+                    Welcome to our poster webshop, where we have an extensive collection of posters to cater to every taste and style. Whether you're looking to decorate your home, office, or any other space, we have a vast selection of posters that are perfect for you. Our posters are printed on high-quality paper and are available in different sizes to fit your needs. From motivational quotes and landscapes to abstract art and movie posters, we have it all. We also offer fast and reliable shipping so you can receive your posters in no time. Browse through our collection today and find the perfect posters to enhance your space.
+                  </p>
+                </div>
               </div>
-              <div class="row">
-                <div class="col-3">hi</div>
-                <div class="col-3">hi</div>
-                <div class="col-3">hi</div>
-                <div class="col-3">hi</div>
-                <div class="col-3">hi</div>
-                <div class="col-3">hi</div>
-                <div class="col-3">hi</div>
-                <div class="col-3">hi</div>
+              <div class="row pt-4">
+                <div id="Posters" class="col">
+                  <div class="card border-0 bg-transparent" style="width: 18rem">
+                    <a href="/Src/Products/ProductPage.html"
+                      ><img
+                        src="../Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"
+                        class="card-img-top"
+                        alt="..."
+                    /></a>
+                    <div class="card-body bg-transparent">
+                      <h6 class="card-title my-0">
+                        <a href="/Src/Products/ProductPage.html" id="link-text"
+                          >Hilma af Klint</a
+                        >
+                      </h6>
+                      <p class="card-text">
+                        <a href="/Src/Products/ProductPage.html" id="link-text"
+                          >The Ten Largest Childhood</a
+                        >
+                      </p>
+                      <p class="card-text">
+                        <a href="/Src/Products/ProductPage.html" id="price-text">250,00 kr</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div id="Posters" class="col">
+                  <div class="card border-0 bg-transparent" style="width: 18rem">
+                    <a href="/Src/Products/ProductPage.html"
+                      ><img
+                        src="../Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"
+                        class="card-img-top"
+                        alt="..."
+                    /></a>
+                    <div class="card-body bg-transparent">
+                      <h6 class="card-title my-0">
+                        <a href="/Src/Products/ProductPage.html" id="link-text"
+                          >Hilma af Klint</a
+                        >
+                      </h6>
+                      <p class="card-text">
+                        <a href="/Src/Products/ProductPage.html" id="link-text"
+                          >The Ten Largest Childhood</a
+                        >
+                      </p>
+                      <p class="card-text">
+                        <a href="/Src/Products/ProductPage.html" id="price-text">250,00 kr</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div id="Posters" class="col">
+                  <div class="card border-0 bg-transparent" style="width: 18rem">
+                    <a href="/Src/Products/ProductPage.html"
+                      ><img
+                        src="../Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"
+                        class="card-img-top"
+                        alt="..."
+                    /></a>
+                    <div class="card-body bg-transparent">
+                      <h6 class="card-title my-0">
+                        <a href="/Src/Products/ProductPage.html" id="link-text"
+                          >Hilma af Klint</a
+                        >
+                      </h6>
+                      <p class="card-text">
+                        <a href="/Src/Products/ProductPage.html" id="link-text"
+                          >The Ten Largest Childhood</a
+                        >
+                      </p>
+                      <p class="card-text">
+                        <a href="/Src/Products/ProductPage.html" id="price-text">250,00 kr</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div id="Posters" class="col">
+                  <div class="card border-0 bg-transparent" style="width: 18rem">
+                    <a href="/Src/Products/ProductPage.html"
+                      ><img
+                        src="../Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"
+                        class="card-img-top"
+                        alt="..."
+                    /></a>
+                    <div class="card-body bg-transparent">
+                      <h6 class="card-title my-0">
+                        <a href="/Src/Products/ProductPage.html" id="link-text"
+                          >Hilma af Klint</a
+                        >
+                      </h6>
+                      <p class="card-text">
+                        <a href="/Src/Products/ProductPage.html" id="link-text"
+                          >The Ten Largest Childhood</a
+                        >
+                      </p>
+                      <p class="card-text">
+                        <a href="/Src/Products/ProductPage.html" id="price-text">250,00 kr</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div id="Posters" class="col">
+                  <div class="card border-0 bg-transparent" style="width: 18rem">
+                    <a href="/Src/Products/ProductPage.html"
+                      ><img
+                        src="../Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"
+                        class="card-img-top"
+                        alt="..."
+                    /></a>
+                    <div class="card-body bg-transparent">
+                      <h6 class="card-title my-0">
+                        <a href="/Src/Products/ProductPage.html" id="link-text"
+                          >Hilma af Klint</a
+                        >
+                      </h6>
+                      <p class="card-text">
+                        <a href="/Src/Products/ProductPage.html" id="link-text"
+                          >The Ten Largest Childhood</a
+                        >
+                      </p>
+                      <p class="card-text">
+                        <a href="/Src/Products/ProductPage.html" id="price-text">250,00 kr</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div id="Posters" class="col">
+                  <div class="card border-0 bg-transparent" style="width: 18rem">
+                    <a href="/Src/Products/ProductPage.html"
+                      ><img
+                        src="../Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"
+                        class="card-img-top"
+                        alt="..."
+                    /></a>
+                    <div class="card-body bg-transparent">
+                      <h6 class="card-title my-0">
+                        <a href="/Src/Products/ProductPage.html" id="link-text"
+                          >Hilma af Klint</a
+                        >
+                      </h6>
+                      <p class="card-text">
+                        <a href="/Src/Products/ProductPage.html" id="link-text"
+                          >The Ten Largest Childhood</a
+                        >
+                      </p>
+                      <p class="card-text">
+                        <a href="/Src/Products/ProductPage.html" id="price-text">250,00 kr</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
