--- a/Src/Products/LifeAndLove.html
+++ b/Src/Products/LifeAndLove.html
@@ -116,7 +116,7 @@
           <div class="card border-0 bg-transparent" style="width: 18rem">
             <a href="/src/Products/Paix.html"
               ><img
-                src="/Images/colombepaix-plakat_1000x.jpg.webp"
+                src="/Images/Screenshot 2023-03-06 at 12-24-15 Et La Paix exhibition poster - Picasso.png"
                 class="card-img-top"
                 alt="..."
             /></a>
