--- a/Src/Products/Paix.html
+++ b/Src/Products/Paix.html
@@ -57,7 +57,7 @@
       <div class="row">
         <div class="col" id="prodimgcol">
           <img
-            src="/Images/Skærmbillede 2023-03-03 kl. 15.00.02.png"
+            src="/Images/Screenshot 2023-03-06 at 12-24-15 Et La Paix exhibition poster - Picasso.png"
             class="img-fluid rounded mx-auto d-block"
             id="prodimg"
             alt=""
