--- a/Src/Products/PortraitDeMarie.html
+++ b/Src/Products/PortraitDeMarie.html
@@ -117,7 +117,7 @@
           <div class="card border-0 bg-transparent" style="width: 18rem">
             <a href="/src/ProductPage.html"
               ><img
-                src="/Images/Skærmbillede 2023-03-03 kl. 15.00.02.png"
+                src="/Images/Screenshot 2023-03-06 at 12-24-15 Et La Paix exhibition poster - Picasso.png"
                 class="card-img-top"
                 alt="..."
             /></a>
@@ -136,7 +136,7 @@
           <div class="card border-0 bg-transparent" style="width: 18rem">
             <a href="/Src/Products/MonetTheArtistsGaden.html"
               ><img
-                src="/Src/Products/MonetTheArtistsGaden.html"
+                src="/Images/Monet - The Artist's Garden at Vétheuil Plakat.png"
                 class="card-img-top"
                 alt="..."
             /></a>
