--- a/Src/allPosters.html
+++ b/Src/allPosters.html
@@ -59,7 +59,10 @@
     </header>
     <div class="container-fluid" id="main-container">
       <div class="row">
-        <div class="col-2">
+      <div class="container-md">
+        
+      </div>  
+        <div id="sidenav" class="col-12 col-md-2">
           <div class="sidenav mt-5">
             <div class="row mb-3">
               <div class="container-fluid ps-3 mb" id="main-container">
@@ -179,7 +182,7 @@
             </div>
           </div>
         </div>
-        <div class="col-10">
+        <div class="col-12 col-md-10">
           <div class="container-fluid">
             <div class="row justify-content-around">
               <div class="row mt-5">
