--- a/Src/index.html
+++ b/Src/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <title>Document</title>
+    <script src="App.js"> </script>
   </head>
 
   <body>
@@ -62,7 +63,7 @@
       <div class="col">
         <div class="background">
           <div class="flex-container">
-            <div class="flex-item"><p>Hi there!</p></div>
+            <div class="flex-item"> <p id = "message" >Welcome!</p></div>
             <a href="allPosters.html">
               <div class="flex-item2">
                 <p><font color="black">Browse all posters</font></p>
@@ -191,7 +192,12 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+      crossorigin="anonymous"> 
+     </script>
+
+    <script>
+    document.body.onload = addName(); 
+    </script>
+
+</body>
 </html>
