Added Products to allPosters.html

--- a/Src/Products/MonetTheArtistsGaden.html
+++ b/Src/Products/MonetTheArtistsGaden.html
@@ -64,7 +64,7 @@
           />
         </div>
         <div class="col mx-auto my-auto">
-          <h2 id="prodheader">Monet</h2>
+          <h2 id="prodheader">Claude Monet</h2>
           <h5 id="prodheader">The Artist's Aarden at Vétheuil</h5>
           <h6 id="price">200,00kr</h6>
           <div id="prodtext" class="text-body">
