Fixed the product-pages

--- a/Src/Products/PortraitDeMarie.html
+++ b/Src/Products/PortraitDeMarie.html
@@ -90,7 +90,7 @@
       <div class="row justify-content-center ">
         <div id="Posters" class="col">
           <div class="card border-0 bg-transparent" style="width: 18rem">
-            <a href="/Src/ProductPage.html"
+            <a href="/src/Products/HilmaChildhood.html"
               ><img
                 src="/Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"
                 class="card-img-top"
@@ -98,24 +98,24 @@
             /></a>
             <div class="card-body bg-transparent">
               <h6 class="card-title my-0">
-                <a href="/src/ProductPage.html" id="link-text"
+                <a href="/src/Products/HilmaChildhood.html" id="link-text"
                   >Hilma af Klint</a
                 >
               </h6>
               <p class="card-text">
-                <a href="/src/ProductPage.html" id="link-text"
+                <a href="/src/Products/HilmaChildhood.html" id="link-text"
                   >The Ten Largest Childhood</a
                 >
               </p>
               <p class="card-text">
-                <a href="/src/ProductPage.html" id="price-text">250,00 kr</a>
+                <a href="/src/Products/HilmaChildhood.html" id="price-text">250,00 kr</a>
               </p>
             </div>
           </div>
         </div>
         <div id="Posters" class="col">
           <div class="card border-0 bg-transparent" style="width: 18rem">
-            <a href="/src/ProductPage.html"
+            <a href="/src/Products/Paix.html"
               ><img
                 src="/Images/Screenshot 2023-03-06 at 12-24-15 Et La Paix exhibition poster - Picasso.png"
                 class="card-img-top"
@@ -123,10 +123,10 @@
             /></a>
             <div class="card-body bg-transparent">
               <h6 class="card-title my-0">
-                <a href="/src/ProductPage.html" id="link-text">Pablo Picasso</a>
+                <a href="/src/Products/Paix.html" id="link-text">Pablo Picasso</a>
               </h6>
               <p class="card-text">
-                <a href="/src/ProductPage.html" id="link-text">Paix</a>
+                <a href="/src/Products/Paix.html" id="link-text">Paix</a>
               </p>
               <p class="card-text"><a href="" id="price-text">150,00 kr</a></p>
             </div>
