--- a/Src/Products/JohnMillerSummer.html
+++ b/Src/Products/JohnMillerSummer.html
@@ -117,7 +117,7 @@
           <div class="card border-0 bg-transparent" style="width: 18rem">
             <a href="/src/Products/Paix.html"
               ><img
-                src="/Images/PicassoPaix.png"
+                src="/Images/Screenshot 2023-03-06 at 12-24-15 Et La Paix exhibition poster - Picasso.png"
                 class="card-img-top"
                 alt="..."
             /></a>
