--- a/Src/Products/MonetTheArtistsGaden.html
+++ b/Src/Products/MonetTheArtistsGaden.html
@@ -90,7 +90,7 @@
       <div class="row justify-content-center ">
         <div id="Posters" class="col">
           <div class="card border-0 bg-transparent" style="width: 18rem">
-            <a href="/Src/ProductPage.html"
+            <a href="/Src/Products/HilmaChildhood.html"
               ><img
                 src="/Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"
                 class="card-img-top"
@@ -98,7 +98,7 @@
             /></a>
             <div class="card-body bg-transparent">
               <h6 class="card-title my-0">
-                <a href="/src/Products/HilmaChildhood.html" id="link-text"
+                <a href="/Src/Products/HilmaChildhood.html" id="link-text"
                   >Hilma af Klint</a
                 >
               </h6>
