--- a/Src/Products/UnPoDiBlu.html
+++ b/Src/Products/UnPoDiBlu.html
@@ -89,7 +89,7 @@
       <div class="row justify-content-center ">
         <div id="Posters" class="col">
           <div class="card border-0 bg-transparent" style="width: 18rem">
-            <a href="/Src/ProductPage.html"
+            <a href="/Src/Products/HilmaChildhood.html"
               ><img
                 src="/Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"
                 class="card-img-top"
@@ -97,24 +97,24 @@
             /></a>
             <div class="card-body bg-transparent">
               <h6 class="card-title my-0">
-                <a href="/src/ProductPage.html" id="link-text"
+                <a href="/Src/Products/HilmaChildhood.html" id="link-text"
                   >Hilma af Klint</a
                 >
               </h6>
               <p class="card-text">
-                <a href="/src/ProductPage.html" id="link-text"
+                <a href="/Src/Products/HilmaChildhood.html" id="link-text"
                   >The Ten Largest Childhood</a
                 >
               </p>
               <p class="card-text">
-                <a href="/src/ProductPage.html" id="price-text">250,00 kr</a>
+                <a href="/Src/Products/HilmaChildhood.html" id="price-text">250,00 kr</a>
               </p>
             </div>
           </div>
         </div>
         <div id="Posters" class="col">
           <div class="card border-0 bg-transparent" style="width: 18rem">
-            <a href="/src/ProductPage.html"
+            <a href="/src/Products/KlorofylSelfPortrait.html"
               ><img
                 src="/Images/Screenshot 2023-02-21 at 19-51-39 SELF-PORTRAIT 02.png"
                 class="card-img-top"
@@ -122,10 +122,10 @@
             /></a>
             <div class="card-body bg-transparent">
               <h6 class="card-title my-0">
-                <a href="/src/ProductPage.html" id="link-text">Klorofyl</a>
+                <a href="/src/Products/KlorofylSelfPortrait.html" id="link-text">Klorofyl</a>
               </h6>
               <p class="card-text">
-                <a href="/src/ProductPage.html" id="link-text">SELF-PORTRAIT</a>
+                <a href="/src/Products/KlorofylSelfPortrait.html" id="link-text">SELF-PORTRAIT</a>
               </p>
               <p class="card-text"><a href="" id="price-text">255,00 kr</a></p>
             </div>
@@ -133,7 +133,7 @@
         </div>
         <div id="Posters" class="col">
           <div class="card border-0 bg-transparent" style="width: 18rem">
-            <a href="/src/ProductPage.html"
+            <a href="/src/Products/MonetTheArtistsGaden.html"
               ><img
                 src="/Images/Monet - The Artist's Garden at Vétheuil Plakat.png"
                 class="card-img-top"
@@ -141,15 +141,15 @@
             /></a>
             <div class="card-body">
               <h6 class="card-title my-0">
-                <a href="/src/ProductPage.html" id="link-text">Monet</a>
+                <a href="/src/Products/MonetTheArtistsGaden.html" id="link-text">Monet</a>
               </h6>
               <p class="card-text">
-                <a href="/src/ProductPage.html" id="link-text"
+                <a href="/src/Products/MonetTheArtistsGaden.html" id="link-text"
                   >The Artist's Garden at Vétheuil</a
                 >
               </p>
               <p class="card-text">
-                <a href="/Src/ProductPage.html" id="price-text">200,00 kr</a>
+                <a href="/src/Products/MonetTheArtistsGaden.html" id="price-text">200,00 kr</a>
               </p>
             </div>
           </div>
